# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "concordium_staking"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "Bhupendra Bisht <bhupendrabisht61049@gmail.com>" ]
description = "Staking Platform On Concordium"

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = {version = "10.0", default-features = false}
concordium-cis2 = {version = "6.1.0"}

[dev-dependencies]
concordium-smart-contract-testing = "4.2"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
